--- a/templates/homepage/rank.html
+++ b/templates/homepage/rank.html
@@ -1,8 +1,16 @@
-{% extends "cache.html" %}
+{% extends "header.html" %}
 {% block title %}404老油条排行榜{% end %}
 {% block content %}
-{% for user in users%}
-<p>{{user.user_name}}</p>
-<a href="/blog?id={{user.user_id}}" title="">{{user.user_name}}</a>
-{% end %}
+<div class="container">
+	<h1 style="text-align: center;margin-top: 50px;">俱乐部老友榜</h1>
+    <div class="col-md-12 rank-list">
+    	{% for user in users%}
+			<div class="rank-item">
+			    <a href="/blog?id={{user.user_id}}"><img class="userlogo" src="{{urls[user.user_id]}}" alt=""></a>
+			    <p>{{user.user_name}}</p>
+			</div>
+        {% end %}
+    </div>
+</div>
+
 {% end %}
