--- a/templates/article.html
+++ b/templates/article.html
@@ -1,4 +1,4 @@
-{% extends "homepage\cache.html" %}
+{% extends "homepage/cache.html" %}
 {% block title %}{{article_title}}{% end %}
 {% block content %}
 <!-- single -->
