去掉博客栏

--- a/templates/homepage/cache.html
+++ b/templates/homepage/cache.html
@@ -59,7 +59,7 @@
                 <!-- 					<li><a class="active" href="/404">DESIGN FOLIO</a></li> -->
                 <!-- 					<li><a href="/home/services">Services</a></li> -->
                 <!-- 					<li><a href="/home/about">About</a></li> -->
-                <li><a href="/home/single">博客</a></li>
+<!--                 <li><a href="/home/single">博客</a></li> -->
                 <li><a href="/home/contact">联系我们</a></li>
                 <li><a href="/home/aboutus">关于我们</a></li>
                 <li><a href="/home/rank">俱乐部老友录</a></li>
